add what I've practiced in Opentutorials

--- a/3.html
+++ b/3.html
@@ -1,28 +1,49 @@
 <!doctype html>
 <html>
+
 <head>
   <title>그릿 : 끈기있는 열정</title>
   <meta charset="UTF-8">
+
+  <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+  </script>
+  <script src="color.js">
+  </script>
 </head>
 
-<h1><a href="index.html" target="_blank" title="index">자기계발</a></h1>
-<ol>
-  <li><a href="1.html">계획을 세우고 지키는 방법</a></li>
-  <li><a href="2.html">완벽주의에서 벗어나는 방법</a></li>
-  <li><a href="3.html">그릿 : 끈기있는 열정</a></li>
-  <li><a href="4.html">자기최면</a></li>
-</ol>
-<a href="https://workflowy.com/#/fa91457d7caa" target="_blank" title="workflowy bullet 그릿 : 끈기있는 열정"><h2>그릿 : 끈기있는 열정</h2></a>
+<body>
+  <input id="night_day" type="button" value="night" onclick="
+      night_day_handler(this);
+    ">
+  <h1><a href="index.html" target="_blank" title="index">자기계발</a></h1>
+  <div id="grid">
+    <div id="sidebar">
+      <ol>
+        <li><a href="1.html">계획을 세우고 지키는 방법</a></li>
+        <li><a href="2.html">완벽주의에서 벗어나는 방법</a></li>
+        <li><a href="3.html">그릿 : 끈기있는 열정</a></li>
+        <li><a href="4.html">자기최면</a></li>
+      </ol>
+    </div>
+    <div id="article">
+      <a href="https://workflowy.com/#/fa91457d7caa" target="_blank" title="workflowy bullet 그릿 : 끈기있는 열정">
+        <h2>그릿 : 끈기있는 열정</h2>
+      </a>
 
-  <h3>그릿을 키우는 구체적인 방법</h3>
-  <ol>
-<li>관심사를 파헤쳐라. 그리고 인내심을 가져라</li>
-흥미를 다시, 또다시 자극해줘야 한다는 사실을 기억하라. 흥미를 자극할 방법을 찾아라. 그리고 인내심을 가져라. 관심이 발전하기까지는 시간이 걸린다.
-<li>질적으로 다른 연습을 하라</li>
-구체적이고 도전적인 목표를 설정하라. 완벽히 집중하고 노력하며 즉각적이고 유용한 피드백이 필요하다. 그리고 피드백을 반영한 의식적인 연습의 반복이 전부이다.
-<li>높은 목적의식을 가져라. 그리고 조금씩 현재의 일과 자신의 핵심 목적의 연결성을 증대시켜라.
-크고 근본적인 목적을 가져라. 당신이 하는 일이 사회에 어떤 긍정적 기여를 할 수 있는지 생각해보라. 그리고 현재의 일에 작지만 의미있는 변화를 주어 자신의 핵심 가치와의 연관성을 증대시킬 방법을 생각해보라. 마지막으로 목적이 확실한 롤모델을 찾으라.</li>
-<li>믿음을 가져라. 내일을 더 낫게 만들 수 있다는 믿음을 가져라.
-자기효능감과 관련깊다</li>
-</ol>
+      <h3>그릿을 키우는 구체적인 방법</h3>
+      <ol>
+        <li>관심사를 파헤쳐라. 그리고 인내심을 가져라</li>
+        흥미를 다시, 또다시 자극해줘야 한다는 사실을 기억하라. 흥미를 자극할 방법을 찾아라. 그리고 인내심을 가져라. 관심이 발전하기까지는 시간이 걸린다.
+        <li>질적으로 다른 연습을 하라</li>
+        구체적이고 도전적인 목표를 설정하라. 완벽히 집중하고 노력하며 즉각적이고 유용한 피드백이 필요하다. 그리고 피드백을 반영한 의식적인 연습의 반복이 전부이다.
+        <li>높은 목적의식을 가져라. 그리고 조금씩 현재의 일과 자신의 핵심 목적의 연결성을 증대시켜라.
+          크고 근본적인 목적을 가져라. 당신이 하는 일이 사회에 어떤 긍정적 기여를 할 수 있는지 생각해보라. 그리고 현재의 일에 작지만 의미있는 변화를 주어 자신의 핵심 가치와의 연관성을 증대시킬 방법을 생각해보라. 마지막으로 목적이 확실한 롤모델을 찾으라.</li>
+        <li>믿음을 가져라. 내일을 더 낫게 만들 수 있다는 믿음을 가져라.
+          자기효능감과 관련깊다</li>
+      </ol>
+    </div>
+  </div>
+</body>
+
 </html>
