--- a/1.html
+++ b/1.html
@@ -12,18 +12,18 @@
   </script>
 </head>
 
-<body>
+<body id="page1">
   <input id="night_day" type="button" value="night" onclick="
       night_day_handler(this);
     ">
-  <h1><a href="index.html" target="_blank" title="index">자기계발</a></h1>
+  <h1><a href="index.html" title="index">자기계발</a></h1>
   <div id="grid">
     <div id="sidebar">
       <ol>
-        <li><a href="1.html">계획을 세우고 지키는 방법</a></li>
-        <li><a href="2.html">완벽주의에서 벗어나는 방법</a></li>
-        <li><a href="3.html">그릿 : 끈기있는 열정</a></li>
-        <li><a href="4.html">자기최면</a></li>
+        <li><a href="1.html" class="page1">계획을 세우고 지키는 방법</a></li>
+        <li><a href="2.html" class="page2">완벽주의에서 벗어나는 방법</a></li>
+        <li><a href="3.html" class="page3">그릿 : 끈기있는 열정</a></li>
+        <li><a href="4.html" class="page4">자기최면</a></li>
       </ol>
     </div>
     <div id="article">
