--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
   <title>자기계발</title>
   <meta charset="UTF-8">
+
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
   </script>
   <script src="color.js">
-
   </script>
 </head>
 
-<body>
+<body onload="Currentpage_Underline()">
   <input id="night_day" type="button" value="night" onclick="
       night_day_handler(this);
     ">
-  <h1><a href="index.html" target="_blank" title="index">자기계발</a></h1>
+  <h1><a href="index.html" title="index">자기계발</a></h1>
   <div id="grid">
     <div id="sidebar">
       <ol>
