--- a/3.html
+++ b/3.html
@@ -13,10 +13,18 @@
 </head>
 
 <body id="page3">
-  <input id="night_day" type="button" value="night" onclick="
-      night_day_handler(this);
-    ">
-  <h1><a href="index.html" title="index">자기계발</a></h1>
+  <header>
+    <div id="ServiceNameArea">
+      <h1 id="Service">
+        <a href="index.html" title="index">자기계발</a>
+      </h1>
+      <div class="night_day_position">
+        <input id="night_day" type="button" class="button" value="night" onclick="
+          night_day_handler(this);
+        ">
+      </div>
+    </div>
+  </header>
   <div id="grid">
     <div id="sidebar">
       <ol>
