--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
 </head>
 
 <body onload="Currentpage_Underline()">
-  <input id="night_day" type="button" value="night" onclick="
-      night_day_handler(this);
-    ">
-  <h1><a href="index.html" title="index">자기계발</a></h1>
+  <header>
+    <div id="ServiceNameArea">
+      <h1 id="Service">
+        <a href="index.html" title="index">자기계발</a>
+      </h1>
+      <div class="night_day_position">
+        <input id="night_day" type="button" class="button" value="night" onclick="
+          night_day_handler(this);
+        ">
+      </div>
+    </div>
+  </header>
   <div id="grid">
     <div id="sidebar">
       <ol>
@@ -31,7 +39,7 @@
     </div>
   </div>
   <br>
-  <div id="aa"><a href="일정관리/index.html" style="margin:50px;float:right;color:powderblue;">일정관리</a></div>
+  <div id="aa"><a href="일정관리/index.html" style="margin:50px;float:right;">일정관리</a></div>
 </body>
 
 </html>
