--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </div>
   <br>
-  <div id="aa"><a href="일정관리/index.html" style="margin:50px;float:right;">일정관리</a></div>
+  <div id="aa"><a href="일정관리/Todo.html" style="margin:50px;float:right;">일정관리</a></div>
 </body>
 
 </html>
